# AssEdit

./: .gitignore  app.py  index.html  pyproject.toml  script.js  style.css
static/: script.js  style.css
templates/: index.html  result.html
tool/: compress.html
tools/: audio.html  compress.html  extract.html  image.html  torrent.html  video.html
